// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LadderPage renders the empty state 1`] = `
<DocumentFragment>
  <div
    class="m-ladder-page m-ladder-page--picker-container-visible "
  >
    <div
      class="m-notifications"
    />
    <div
      class="m-picker-container visible"
      data-testid="picker-container"
    >
      <div
        class="c-drawer-tab"
      >
        <button
          class="c-drawer-tab__tab-button"
          data-testid="drawer-tab-button"
          title="Collapse"
        >
          <span>
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-ladder-page__routes-presets-toggle"
      >
        <button
          class="m-ladder-page__routes_picker_button_selected"
          id="m-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="m-ladder-page__routes_picker_button_unselected"
          id="m-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="m-route-picker"
      >
        <div
          class="m-route-filter"
        >
          <div
            class="m-route-filter__text"
          >
            <input
              class="m-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="m-garage-filter"
        >
          <button
            class="m-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="m-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="m-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="m-route-picker__routes-container"
        >
          loading...
          <p>
            Selected routes will show up here…
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="m-picker-container-overlay"
      data-testid="picker-container-overlay"
    />
    <div
      class="m-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="m-ladder-page__route-tab-bar"
        role="tablist"
      >
        <button
          class="m-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="m-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-route-ladders"
        data-testid="route-ladders-div"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LadderPage renders with route tabs 1`] = `
<DocumentFragment>
  <div
    class="m-ladder-page m-ladder-page--picker-container-visible "
  >
    <div
      class="m-notifications"
    />
    <div
      class="m-picker-container visible"
      data-testid="picker-container"
    >
      <div
        class="c-drawer-tab"
      >
        <button
          class="c-drawer-tab__tab-button"
          data-testid="drawer-tab-button"
          title="Collapse"
        >
          <span>
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-ladder-page__routes-presets-toggle"
      >
        <button
          class="m-ladder-page__routes_picker_button_selected"
          id="m-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="m-ladder-page__routes_picker_button_unselected"
          id="m-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="m-route-picker"
      >
        <div
          class="m-route-filter"
        >
          <div
            class="m-route-filter__text"
          >
            <input
              class="m-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="m-garage-filter"
        >
          <button
            class="m-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="m-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="m-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="m-route-picker__routes-container"
        >
          <ul
            class="m-route-picker__route-list"
          >
            <li>
              <button
                class="m-route-picker__route-list-button"
              >
                28
              </button>
            </li>
          </ul>
          <ul
            class="m-route-picker__selected-routes"
          >
            <li>
              <button
                class="m-route-picker__selected-routes-button"
              >
                1
                <span
                  class="m-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="m-picker-container-overlay"
      data-testid="picker-container-overlay"
    />
    <div
      class="m-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="m-ladder-page__route-tab-bar"
        role="tablist"
      >
        <div
          class="m-ladder-page__tab m-ladder-page__tab-current"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-ladder-page__tab-contents"
          >
            <div
              class="m-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="m-ladder-page__tab-save-button"
              title="Save"
            >
              <span>
                <svg />
              </span>
            </button>
            <button
              class="m-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <div
          class="m-ladder-page__tab"
          role="tab"
          tabindex="-1"
        >
          <div
            class="m-ladder-page__tab-contents"
          >
            <div
              class="m-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="m-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <button
          class="m-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="m-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-route-ladders"
        data-testid="route-ladders-div"
      >
        <div
          class="m-route-ladder__header"
        >
          <div
            class="m-route-ladder__close-button-container"
          >
            <button
              aria-label="Close"
              class="m-close-button m-close-button--large m-close-button--darker"
            >
              <span
                aria-hidden="true"
                aria-label=""
                role="img"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-route-ladder__route-name"
          >
            1
          </div>
        </div>
        <div
          class="m-route-ladder__controls"
        >
          <button
            class="m-route-ladder__reverse"
          >
            <span
              class="m-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LadderPage renders with selectedRoutes in different order than routes data 1`] = `
<DocumentFragment>
  <div
    class="m-ladder-page m-ladder-page--picker-container-visible "
  >
    <div
      class="m-notifications"
    />
    <div
      class="m-picker-container visible"
      data-testid="picker-container"
    >
      <div
        class="c-drawer-tab"
      >
        <button
          class="c-drawer-tab__tab-button"
          data-testid="drawer-tab-button"
          title="Collapse"
        >
          <span>
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-ladder-page__routes-presets-toggle"
      >
        <button
          class="m-ladder-page__routes_picker_button_selected"
          id="m-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="m-ladder-page__routes_picker_button_unselected"
          id="m-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="m-route-picker"
      >
        <div
          class="m-route-filter"
        >
          <div
            class="m-route-filter__text"
          >
            <input
              class="m-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="m-garage-filter"
        >
          <button
            class="m-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="m-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="m-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="m-route-picker__routes-container"
        >
          <ul
            class="m-route-picker__route-list"
          />
          <ul
            class="m-route-picker__selected-routes"
          >
            <li>
              <button
                class="m-route-picker__selected-routes-button"
              >
                28
                <span
                  class="m-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
            <li>
              <button
                class="m-route-picker__selected-routes-button"
              >
                1
                <span
                  class="m-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="m-picker-container-overlay"
      data-testid="picker-container-overlay"
    />
    <div
      class="m-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="m-ladder-page__route-tab-bar"
        role="tablist"
      >
        <div
          class="m-ladder-page__tab m-ladder-page__tab-current"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-ladder-page__tab-contents"
          >
            <div
              class="m-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="m-ladder-page__tab-save-button"
              title="Save"
            >
              <span>
                <svg />
              </span>
            </button>
            <button
              class="m-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <button
          class="m-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="m-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-route-ladders"
        data-testid="route-ladders-div"
      >
        <div
          class="m-route-ladder__header"
        >
          <div
            class="m-route-ladder__close-button-container"
          >
            <button
              aria-label="Close"
              class="m-close-button m-close-button--large m-close-button--darker"
            >
              <span
                aria-hidden="true"
                aria-label=""
                role="img"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-route-ladder__route-name"
          >
            28
          </div>
        </div>
        <div
          class="m-route-ladder__controls"
        >
          <button
            class="m-route-ladder__reverse"
          >
            <span
              class="m-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
        <div
          class="m-route-ladder__header"
        >
          <div
            class="m-route-ladder__close-button-container"
          >
            <button
              aria-label="Close"
              class="m-close-button m-close-button--large m-close-button--darker"
            >
              <span
                aria-hidden="true"
                aria-label=""
                role="img"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-route-ladder__route-name"
          >
            1
          </div>
        </div>
        <div
          class="m-route-ladder__controls"
        >
          <button
            class="m-route-ladder__reverse"
          >
            <span
              class="m-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LadderPage renders with timepoints 1`] = `
<DocumentFragment>
  <div
    class="m-ladder-page m-ladder-page--picker-container-visible "
  >
    <div
      class="m-notifications"
    />
    <div
      class="m-picker-container visible"
      data-testid="picker-container"
    >
      <div
        class="c-drawer-tab"
      >
        <button
          class="c-drawer-tab__tab-button"
          data-testid="drawer-tab-button"
          title="Collapse"
        >
          <span>
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-ladder-page__routes-presets-toggle"
      >
        <button
          class="m-ladder-page__routes_picker_button_selected"
          id="m-ladder-page__routes_picker_button"
        >
          Routes
        </button>
        <button
          class="m-ladder-page__routes_picker_button_unselected"
          id="m-ladder-page__presets_picker_button"
        >
          Presets
        </button>
      </div>
      <div
        class="m-route-picker"
      >
        <div
          class="m-route-filter"
        >
          <div
            class="m-route-filter__text"
          >
            <input
              class="m-route-filter__input"
              placeholder="Search routes"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="m-garage-filter"
        >
          <button
            class="m-garage-filter__show-hide-button"
            title="Toggle Garage Filter"
          >
            <div
              class="m-garage-filter__header"
            >
              Filter garages
            </div>
            <div
              class="m-garage-filter__show-hide-icon"
            >
              <span>
                <svg />
              </span>
            </div>
          </button>
        </div>
        <div
          class="m-route-picker__routes-container"
        >
          <ul
            class="m-route-picker__route-list"
          />
          <ul
            class="m-route-picker__selected-routes"
          >
            <li>
              <button
                class="m-route-picker__selected-routes-button"
              >
                28
                <span
                  class="m-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
            <li>
              <button
                class="m-route-picker__selected-routes-button"
              >
                1
                <span
                  class="m-route-picker__selected-routes-button-icon"
                >
                  <svg />
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="m-picker-container-overlay"
      data-testid="picker-container-overlay"
    />
    <div
      class="m-ladder-page__tab-bar-and-ladders"
    >
      <div
        class="m-ladder-page__route-tab-bar"
        role="tablist"
      >
        <div
          class="m-ladder-page__tab m-ladder-page__tab-current"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-ladder-page__tab-contents"
          >
            <div
              class="m-ladder-page__tab-title"
            >
              Untitled
            </div>
            <button
              class="m-ladder-page__tab-save-button"
              title="Save"
            >
              <span>
                <svg />
              </span>
            </button>
            <button
              class="m-old-close-button"
              data-testid="close-button"
              title="Close"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
        </div>
        <button
          class="m-ladder-page__add-tab-button"
          title="Add Tab"
        >
          <span
            class="m-ladder-page__add-tab-icon"
          >
            <svg />
          </span>
        </button>
      </div>
      <div
        class="m-route-ladders"
        data-testid="route-ladders-div"
      >
        <div
          class="m-route-ladder__header"
        >
          <div
            class="m-route-ladder__close-button-container"
          >
            <button
              aria-label="Close"
              class="m-close-button m-close-button--large m-close-button--darker"
            >
              <span
                aria-hidden="true"
                aria-label=""
                role="img"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-route-ladder__route-name"
          >
            28
          </div>
        </div>
        <div
          class="m-route-ladder__controls"
        >
          <button
            class="m-route-ladder__reverse"
          >
            <span
              class="m-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        <div
          class="m-ladder"
          style="width: 184px;"
        >
          <svg
            class="m-ladder__svg"
            height="0"
            viewBox="-92 -55 184 0"
            width="184"
          >
            <line
              class="m-ladder__line"
              x1="-40"
              x2="-40"
              y1="0"
              y2="-110"
            />
            <line
              class="m-ladder__line"
              x1="40"
              x2="40"
              y1="0"
              y2="-110"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="-40"
              cy="0"
              r="3"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="40"
              cy="0"
              r="3"
            />
            <div
              class="mock-tippy"
            >
              <div
                class="mock-tippy-content"
              >
                MATPN Name
              </div>
              <text
                class="m-ladder__timepoint-name"
                dominant-baseline="middle"
                text-anchor="middle"
                x="0"
                y="0"
              >
                MATPN
              </text>
            </div>
            <circle
              class="m-ladder__stop-circle"
              cx="-40"
              cy="-55"
              r="3"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="40"
              cy="-55"
              r="3"
            />
            <div
              class="mock-tippy"
            >
              <div
                class="mock-tippy-content"
              >
                WELLH Name
              </div>
              <text
                class="m-ladder__timepoint-name"
                dominant-baseline="middle"
                text-anchor="middle"
                x="0"
                y="-55"
              >
                WELLH
              </text>
            </div>
            <circle
              class="m-ladder__stop-circle"
              cx="-40"
              cy="-110"
              r="3"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="40"
              cy="-110"
              r="3"
            />
            <div
              class="mock-tippy"
            >
              <div
                class="mock-tippy-content"
              >
                MORTN Name
              </div>
              <text
                class="m-ladder__timepoint-name"
                dominant-baseline="middle"
                text-anchor="middle"
                x="0"
                y="-110"
              >
                MORTN
              </text>
            </div>
          </svg>
        </div>
        <div
          class="m-incoming-box"
        />
        <div
          class="m-route-ladder__header"
        >
          <div
            class="m-route-ladder__close-button-container"
          >
            <button
              aria-label="Close"
              class="m-close-button m-close-button--large m-close-button--darker"
            >
              <span
                aria-hidden="true"
                aria-label=""
                role="img"
              >
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-route-ladder__route-name"
          >
            1
          </div>
        </div>
        <div
          class="m-route-ladder__controls"
        >
          <button
            class="m-route-ladder__reverse"
          >
            <span
              class="m-route-ladder__reverse-icon"
            >
              <svg />
            </span>
            Reverse
          </button>
        </div>
        <div
          class="m-ladder"
          style="width: 184px;"
        >
          <svg
            class="m-ladder__svg"
            height="0"
            viewBox="-92 -55 184 0"
            width="184"
          >
            <line
              class="m-ladder__line"
              x1="-40"
              x2="-40"
              y1="0"
              y2="-110"
            />
            <line
              class="m-ladder__line"
              x1="40"
              x2="40"
              y1="0"
              y2="-110"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="-40"
              cy="0"
              r="3"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="40"
              cy="0"
              r="3"
            />
            <div
              class="mock-tippy"
            >
              <div
                class="mock-tippy-content"
              >
                WASMA Name
              </div>
              <text
                class="m-ladder__timepoint-name"
                dominant-baseline="middle"
                text-anchor="middle"
                x="0"
                y="0"
              >
                WASMA
              </text>
            </div>
            <circle
              class="m-ladder__stop-circle"
              cx="-40"
              cy="-55"
              r="3"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="40"
              cy="-55"
              r="3"
            />
            <div
              class="mock-tippy"
            >
              <div
                class="mock-tippy-content"
              >
                MELWA Name
              </div>
              <text
                class="m-ladder__timepoint-name"
                dominant-baseline="middle"
                text-anchor="middle"
                x="0"
                y="-55"
              >
                MELWA
              </text>
            </div>
            <circle
              class="m-ladder__stop-circle"
              cx="-40"
              cy="-110"
              r="3"
            />
            <circle
              class="m-ladder__stop-circle"
              cx="40"
              cy="-110"
              r="3"
            />
            <div
              class="mock-tippy"
            >
              <div
                class="mock-tippy-content"
              >
                HHGAT Name
              </div>
              <text
                class="m-ladder__timepoint-name"
                dominant-baseline="middle"
                text-anchor="middle"
                x="0"
                y="-110"
              >
                HHGAT
              </text>
            </div>
          </svg>
        </div>
        <div
          class="m-incoming-box"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
